--- a/custom.css
+++ b/custom.css
@@ -13,45 +13,53 @@
             margin: 0 auto;
         } */
 
-        body {
-            background: linear-gradient();
-        }
 
-.header{
+
+.header {
     background-color: rgb(21, 91, 134);
     padding-bottom: .5em;
     padding-left: 2em;
     color: gold;
-    padding-top: .5em   ;
+    padding-top: .5em;
 }
 
-.container-input{
-display: flex;
-justify-content: center;
-margin-left: 6em;
-margin-top: 7em;
-width: 300px;
+.container-input {
+    display: flex;
+    justify-content: center;
+    margin-left: 6em;
+    margin-top: 7em;
+    width: 300px;
 }
 
-.container-cards{
-display: flex;
-justify-content: center;
+.container-cards {
+    display: flex;
+    justify-content: center;
 }
 
-.container-cards div{
+.container-cards div {
     display: flex;
     justify-content: space-between;
 }
 
-.container-cards a{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.container-cards a {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-decoration: none;
 }
 
-.card-header{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.card-header {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    color: rgb(17, 132, 57);
+    text-align: center;
+    padding: 10px;
 }
 
-.card-header a:hover{
+.card-header a:hover {
     text-decoration: underline;
+
+}
+
+#btnDeleteAll {
+    
+    
 }
